--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -26,4 +26,10 @@
         android:background="@color/colorAccent"
         android:textSize="25sp"/>
 
+    <Button
+        android:id="@+id/button_second_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Second Activity"/>
+
 </LinearLayout>
